--- a/requirements.txt
+++ b/requirements.txt
@@ -33,6 +33,7 @@ pyarrow==19.0.1
 pydantic==2.11.3
 pydantic-core==2.33.1
 pydeck==0.9.1
+pypdf2==3.0.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
 pytz==2025.2
