--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ jinja2==3.1.6
 jiter==0.9.0
 jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
+lxml==5.3.2
 markupsafe==3.0.2
 narwhals==1.34.1
 numpy==2.2.4
@@ -34,7 +35,9 @@ pydantic==2.11.3
 pydantic-core==2.33.1
 pydeck==0.9.1
 pypdf2==3.0.1
+pytesseract==0.3.13
 python-dateutil==2.9.0.post0
+python-docx==1.1.2
 python-dotenv==1.1.0
 pytz==2025.2
 pyyaml==6.0.2
